logs/run_04/rewrite.log
分析完成：4 个不支持的算子
  已入库/可映射: 0
  可拆分: 0
  数学等价改写: 0
  需开发: 4
已生成 8 个文件/脚手架
  File "<string>", line 23
    new_src = re.sub(r'=[ \t]*[']gpu[\']', '= npu', new_src)
                                ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '('
